# ROGL3

./: CMakeLists.txt  README.md  conandata.yml  main.cpp
Core/: CMakeLists.txt  fastSine.cpp  fastSine.h
Core/Renderer/: Renderer.cpp  Renderer.h
Core/Singleton/: PerfAnalyzer.cpp  PerfAnalyzer.h  TSingleton.h
